--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Associação de Apoio à Pessoa com Câncer - AAPC</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+      </style>
     <link rel="icon" href="img/307464198_419313336982168_1928713362346806766_n_1_-removebg-preview.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -66,15 +69,15 @@
       <div class="container about">
         <div>
             <h3>Sobre Nós</h3>
-            <h2>Fundada em Feira de Santana, nossa associação nasceu do desejo de oferecer apoio e acolhimento às pessoas com câncer</h2>
+            <h2>Fundada em Feira de Santana, nossa associação nasceu do desejo de oferecer <br>apoio e acolhimento às pessoas com câncer</h2>
         </div>
         <div class="row">
             <div class="col-sm-6 mb-3 mb-sm-0">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Nossa Missão</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Acolher pessoas em tratamento oncológico de Feira de Santana e cidades vizinhas, oferecendo hospedagem com todas as refeições, além de suporte social, psicológico, jurídico e de enfermagem.</p>
+                  <img src="https://img.icons8.com/?size=100&id=36172&format=png&color=208B4B">
                 </div>
               </div>
             </div>
@@ -82,8 +85,8 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Quem Somos</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Somos uma associação que acolhe pessoas em tratamento oncológico, oferecendo suporte completo e um ambiente de cuidado humanizado, com respeito e empatia.</p>
+                  <img src="https://img.icons8.com/?size=100&id=9514&format=png&color=208B4B">
                 </div>
               </div>
             </div>
@@ -91,8 +94,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">O Que Fazemos</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Garantir um lar temporário para pacientes em tratamento, com refeições completas e assistência especializada em diversas áreas, sempre com atenção e carinho em cada detalhe.</p>
+                    <img src="https://img.icons8.com/?size=100&id=38074&format=png&color=208B4B">
                   </div>
                 </div>
               </div>
@@ -100,41 +103,42 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Como Ajudar?</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Voce pode contribuir com doações, voluntariado ou divulgando nossa causa. Cada gesto de solidariedade nos ajuda a continuar cuidando de quem precisa.</p>
+                    <img src="https://img.icons8.com/?size=100&id=8617&format=png&color=208B4B">
                   </div>
                 </div>
               </div>
           </div>
       </div>
 
-      <div class="container doe row">
+      <div class="container doe">
         <div>
             <h1>Como Ajudar?</h1>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="donate-cards">
+          <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Pix</h5>
+              <p class="card-text">Doe com facilidade! Use nosso pix e transforme vidas agora mesmo.</p>
+              <a href="#" class="btn btn-primary">Gerar QR Code</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Alimentos</h5>
+              <p class="card-text">Sua doação de alimentos pode trazer esperança e sustento a quem mais precisa.</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Ítens de Limpeza e Higiene Pessoal</h5>
+              <p class="card-text">Ajude a proporcionar cuidado e dignidade. Doe itens de limpeza e higiene pessoal e faça a</p>
             </div>
+        </div>
+        
           </div>
           <div>
             <p>As doações podem ser entregues na sede da instituição, localizada na Rua Tereza Cunha Santana, Nº 172 no bairro São João
@@ -142,6 +146,7 @@
           </div>
       </div>
       <div class="container faq">
+        <h1>Dúvidas Frequentes</h1>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -179,6 +184,30 @@
                 </div>
               </div>
             </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                  Vocês atendem pessoas de todas as faixas etárias?
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Sim.</strong> Atendemos crianças, jovens, adultos e idosos.
+                </div>
+              </div>
+              </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifth" aria-expanded="false" aria-controls="collapseThree">
+                  A associação aceita doações de cabelo?
+                </button>
+              </h2>
+              <div id="collapseFifth" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
           </div>
       </div>
       <div class="container contact">
@@ -204,9 +233,12 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899.0053325940185!2d-38.955272324935635!3d-12.247917888004903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71437871ee0a1e7%3A0x9ffab5782d740c96!2sAAPC-%20Associa%C3%A7%C3%A3o%20de%20Apoio%20a%20Pessoas%20com%20C%C3%A2ncer!5e0!3m2!1spt-BR!2sbr!4v1742693550320!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </div>
-        <div class="footer">
-            <p>Associação de Apoio à Pessoa com Câncer (AAPC) 2025</p>
-        </div>
+        <div class="container-fluid p-0 footer">
+          <footer class="bg-dark text-white text-center py-3 m-0">
+              © Associação de Apoio à Pessoa com Câncer (AAPC) = 2025.
+          </footer>
+      </div>
+      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
