--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Associação de Apoio à Pessoa com Câncer - AAPC</title>
+    <meta name="description" content="Somos uma associação que acolhe pessoas em tratamento oncológico, oferecendo suporte completo e um ambiente de cuidado humanizado, com respeito e empatia.">
     <link rel="stylesheet" href="style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -12,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg  fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img id="logo" alt="Logo AAPC" src="img/307464198_419313336982168_1928713362346806766_n_1_-removebg-preview.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,62 +22,59 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Sobre Nós</a>
+                <a class="nav-link" aria-current="page" href="#about">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Como Ajudar?</a>
+                <a class="nav-link" href="#doe">Como Ajudar?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dúvidas Frequentes</a>
+                <a class="nav-link" href="#faq">Dúvidas Frequentes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
+                <a class="nav-link" href="#contact">Contato</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
-      <div class="container home">
-        <div>
-            <h1>Associação de Apoio à Pessoa com Câncer</h1>
-            <p>A AAPC oferece apoio a pessoas em tratamento da doença, fornecendo atendimento, abrigo e refeições.</p>
-        </div>
-        <div>
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/unnamed.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>        </div>
+            
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/associacao.jpg" class="d-block w-100" alt="...">
+      <div class="overlay"></div>
+  </div>
+      <div class="carousel-item">
+          <img src="img/aapc img.png" class="d-block w-100" alt="...">
+          <div class="overlay"></div>
       </div>
-
-      <div class="container about">
+      <div class="carousel-item">
+          <img src="img/aapc.png" class="d-block w-100" alt="...">
+          <div class="overlay"></div>
+      </div>
+      <div class="carousel-item">
+          <img src="img/colorrida aapc .png" class="d-block w-100" alt="...">
+          <div class="overlay"></div>
+      </div>
+      <div class="carousel-item">
+          <img src="img/aapc criancas.jpg" class="d-block w-100" alt="...">
+          <div class="overlay"></div>
+      </div>
+  </div>
+  <div class="title">
+    <h1>Associação de Apoio à Pessoa com Câncer</h1>
+        <p>A AAPC oferece apoio a pessoas em tratamento da doença, fornecendo atendimento, abrigo e refeições.</p>
+  </div>
+      <div class="container about" id="about">
         <div>
             <h3>Sobre Nós</h3>
-            <h2>Fundada em Feira de Santana, nossa associação nasceu do desejo de oferecer <br>apoio e acolhimento às pessoas com câncer</h2>
         </div>
         <div class="row">
             <div class="col-sm-6 mb-3 mb-sm-0">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Nossa Missão</h5>
-                  <p class="card-text">Acolher pessoas em tratamento oncológico de Feira de Santana e cidades vizinhas, oferecendo hospedagem com todas as refeições, além de suporte social, psicológico, jurídico e de enfermagem.</p>
+                  <p class="card-text">Acolher pessoas em tratamento oncológico de Feira de Santana e cidades vizinhas, oferecendo hospedagem com refeições, suporte social, psicológico, jurídico e de enfermagem.</p>
                   <img src="https://img.icons8.com/?size=100&id=36172&format=png&color=208B4B">
                 </div>
               </div>
@@ -90,42 +88,44 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">O Que Fazemos</h5>
-                    <p class="card-text">Garantir um lar temporário para pacientes em tratamento, com refeições completas e assistência especializada em diversas áreas, sempre com atenção e carinho em cada detalhe.</p>
-                    <img src="https://img.icons8.com/?size=100&id=38074&format=png&color=208B4B">
-                  </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">O Que Fazemos</h5>
+                  <p class="card-text">Garantir um lar temporário para pacientes em tratamento, com refeições completas e assistência especializada em diversas áreas, sempre com atenção e carinho em cada detalhe.</p>
+                  <img src="https://img.icons8.com/?size=100&id=38074&format=png&color=208B4B">
                 </div>
               </div>
-              <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Como Ajudar?</h5>
-                    <p class="card-text">Voce pode contribuir com doações, voluntariado ou divulgando nossa causa. Cada gesto de solidariedade nos ajuda a continuar cuidando de quem precisa.</p>
-                    <img src="https://img.icons8.com/?size=100&id=8617&format=png&color=208B4B">
-                  </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Como Ajudar?</h5>
+                  <p class="card-text">Voce pode contribuir com doações, voluntariado ou divulgando nossa causa. Cada gesto de solidariedade nos ajuda a continuar cuidando de quem precisa.</p>
+                  <img src="https://img.icons8.com/?size=100&id=8617&format=png&color=208B4B">
                 </div>
               </div>
+            </div>
           </div>
       </div>
 
-      <div class="container doe">
+      <div class="container doe" id="doe">
         <div>
-            <h1>Como Ajudar?</h1>
+            <h2>Como Ajudar?</h2>
         </div>
         <div class="donate-cards">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://img.icons8.com/?size=100&id=CuUOYOfd3Dy9&format=png&color=157347" style="width: 100px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pix</h5>
               <p class="card-text">Doe com facilidade! Use nosso pix e transforme vidas agora mesmo.</p>
-              <a href="#" class="btn btn-primary">Gerar QR Code</a>
+              <a href="#" class="btn btn-success">Gerar QR Code Pix</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://img.icons8.com/?size=100&id=Cr2OGFPNc6wf&format=png&color=157347" class="card-img-top" alt="..." style="width: 100px;">
             <div class="card-body">
               <h5 class="card-title">Alimentos</h5>
               <p class="card-text">Sua doação de alimentos pode trazer esperança e sustento a quem mais precisa.</p>
@@ -145,8 +145,8 @@
             </p>
           </div>
       </div>
-      <div class="container faq">
-        <h1>Dúvidas Frequentes</h1>
+      <div class="container faq" id="faq">
+        <h2>Dúvidas Frequentes</h2>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -156,7 +156,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  As doações são destinadas à associação e utilizadas para atender as necessidades dos pacientes em tratamento oncológico, garantindo alimentação, abrigo, suporte social, psicológico, jurídico e de enfermagem.
                 </div>
               </div>
             </div>
@@ -168,7 +168,7 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Alimentos perecíveis e não perecíveis, como arroz, feijão, macarrão, açúcar, café, leite em pó, frutas e verduras. É importante verificar a validade dos produtos antes de doar.
                 </div>
               </div>
             </div>
@@ -180,7 +180,7 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Sim.</strong> Aceitamos doações de roupas.
                 </div>
               </div>
             </div>
@@ -204,15 +204,27 @@
               </h2>
               <div id="collapseFifth" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Sim.</strong> Aceitamos doações de cabelo.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixth" aria-expanded="false" aria-controls="collapseThree">
+                  Onde fica a sede da associação?
+                </button>
+              </h2>
+              <div id="collapseSixth" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  A sede da associação está localizada na <strong>Rua Tereza Cunha Santana, Nº 172, São João, Feira de Santana - BA.</strong>
                 </div>
               </div>
             </div>
           </div>
       </div>
-      <div class="container contact">
+      <div class="container contact" id="contact">
         <div>
-            <h1>Contato</h1>
+            <h2>Contato</h2>
         </div>
         <div class="contact-cont">
             <div class="contact-items">
