--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" aria-current="page" href="#about">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#doe">Como Ajudar?</a>
+                <a class="nav-link" href="#doe">Como Doar?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#faq">Dúvidas Frequentes</a>
@@ -45,7 +45,7 @@
               <a href="#doe" class="btn btn-primary">Como Ajudar?</a>
           </div>
           <div class="img-header">
-            <img id="header" src="img/icon aapc.png" style="max-width: 400px; width: 300px;" alt="...">
+            <img id="header" src="img/icon aapc.png" style="max-width: 400px; width: 300px;" alt="Icon AAPC">
           </div>
       </div>
       
@@ -119,28 +119,28 @@
         
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/associacao.jpg" class="d-block" alt="...">
+              <img src="img/associacao.jpg" class="d-block" alt="Família AAPC">
           </div>
               <div class="carousel-item">
-                  <img src="img/aapc img.png" class="d-block" alt="...">
+                  <img src="img/aapc img.png" class="d-block" alt="Alimentação AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/aapc.png" class="d-block" alt="...">
+                  <img src="img/aapc.png" class="d-block" alt="Natal AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/colorrida aapc .png" class="d-block" alt="...">
+                  <img src="img/colorrida aapc .png" class="d-block" alt="Colorrida AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/aapc criancas.jpg" class="d-block" alt="...">
+                  <img src="img/aapc criancas.jpg" class="d-block" alt="AAPC Crianças">
               </div>
               <div class="carousel-item">
-                <img src="img/AAPC ensina.jpg" class="d-block" alt="...">
+                <img src="img/AAPC ensina.jpg" class="d-block" alt="criança estudando">
             </div>
             <div class="carousel-item">
-              <img src="img/aapc pessoas.jpg" class="d-block" alt="...">
+              <img src="img/aapc pessoas.jpg" class="d-block" alt="Grupo de Senhoras">
           </div>
           <div class="carousel-item">
-            <img src="img/aapc oficina.jpg" class="d-block" alt="...">
+            <img src="img/aapc oficina.jpg" class="d-block" alt="Senhoras costurando">
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
