--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
               <p>Transformando vidas com amor e solidariedade.</p>
               <a href="#doe" class="btn btn-primary">Como Ajudar?</a>
           </div>
-          <div class="img-header">
-            <img id="header" src="img/icon aapc.png" style="max-width: 400px; width: 300px;" alt="Icon AAPC">
-          </div>
-      </div>
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-home" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/carousel img.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/carousel img2.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/carousel img3.png" class="d-block" alt="...">
+                </div>
+              </div>
+            </div>          </div>
+      
       
   <!--<img id="header" src="img/aapc associacao de apoio a pessoa com cancer.png" class="d-block w-100" alt="...">-->  
       <div class="container about" id="about">
