--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </nav>
       <div id="meuContainer">
           <div class="h1">
+            <img src="img/icon aapc.png" style="width: 100px">
               <h1>Associação de Apoio à Pessoa com Câncer</h1>
               <p>Transformando vidas com amor e solidariedade.</p>
               <a href="#doe" class="btn btn-primary">Como Ajudar?</a>
@@ -47,6 +48,9 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide carousel-home" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
+                  <img src="img/aapc carousel.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
                   <img src="img/carousel img.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
