--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="description" content="Somos uma associação que acolhe pessoas em tratamento oncológico, oferecendo suporte completo e um ambiente de cuidado humanizado, com respeito e empatia.">
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="noindex">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "NGO",
+        "name": "Associação de Apoio à Pessoa com Câncer",
+        "alternateName": "AAPC",
+        "url": "https://www.inserirURL.com",
+        "logo": "https://www.inserirURL.com",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "(75) 99211-1055",
+          "contactType": "",
+          "areaServed": "BR",
+          "availableLanguage": "Portuguese"
+        },
+        "sameAs": [
+          "https://www.instagram.com/aapcoficial",
+          "https://www.inserirURL.com",
+          "https://www.facebook.com/AAPC.FSA"
+        ]
+      }
+      </script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
@@ -188,6 +210,18 @@
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseO" aria-expanded="false" aria-controls="collapseOne">
+                  O que pode ser doado?
+                </button>
+              </h2>
+              <div id="collapseO" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  São aceitas doações de alimentos, roupas, produtos de higiene pessoal, materiais de limpeza, brinquedos, cabelo (a partir de 20cm) e itens de conforto para os pacientes. Também aceitamos doações em dinheiro para ajudar nas despesas da associação.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   Quais alimentos podem ser doados?
                 </button>
@@ -206,7 +240,7 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>Sim.</strong> Aceitamos doações de roupas.
+                  <strong>Sim.</strong> Aceitamos doações de roupas desde que sejam novas ou estejam em bom estado.
                 </div>
               </div>
             </div>
@@ -230,7 +264,7 @@
               </h2>
               <div id="collapseFifth" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>Sim.</strong> Aceitamos doações de cabelo.
+                  <strong>Sim.</strong> Aceitamos doações de cabelo a partir de 20cm.
                 </div>
               </div>
             </div>
@@ -242,7 +276,7 @@
               </h2>
               <div id="collapseSixth" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  A sede da associação está localizada na <strong>Rua Tereza Cunha Santana, Nº 172, São João, Feira de Santana - BA.</strong>
+                  A sede da associação está localizada na <strong>Rua Tereza Cunha Santana, Nº 174, São João, Feira de Santana - BA.</strong>
                 </div>
               </div>
             </div>
@@ -255,7 +289,7 @@
           <div class="col cardss">
             <div class="card ctt">
               <h3>Endereço</h3>
-              <p>Rua Tereza Cunha Santana, Nº 172, São João, Feira de Santana - BA</p>
+              <p>Rua Tereza Cunha Santana, Nº 174, São João, Feira de Santana - BA</p>
           </div>
           <div class="card ctt">
               <h3>Telefone</h3>
