--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
               <p>Transformando vidas com amor e solidariedade.</p>
               <a href="#doe" class="btn btn-primary">Como Ajudar?</a>
           </div>
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-home" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-home" data-bs-wrap="true" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/aapc carousel.png" class="d-block" alt="...">
+                  <img src="img/aapc carousel.png" class="d-block" alt="Crianças deitadas na grama vestindo camisa da AAPC, sujas de tintas coloridas">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carousel img.png" class="d-block" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/carousel img2.png" class="d-block" alt="...">
+                  <img src="img/carousel img2.png" class="d-block" alt="Criança ">
                 </div>
                 <div class="carousel-item">
                   <img src="img/carousel img3.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/carousel img.png" class="d-block" alt="...">
                 </div>
               </div>
             </div>          </div>
@@ -90,9 +90,9 @@
         <div>
             <h2>Sobre Nós</h2>
         </div>
-        <div class="row">
+        <div class="row ">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="card-title">Nossa Missão</h5>
                   <p class="card-text">Acolher pessoas em tratamento oncológico de Feira de Santana e cidades vizinhas, oferecendo hospedagem com refeições, suporte social, psicológico, jurídico e de enfermagem.</p>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="card-title">Quem Somos</h5>
                   <p class="card-text">Somos uma associação fundada no ano de 2002, com o objetivo de oferecer acolhimento e apoio integral a quem enfrenta o câncer, promovendo bem-estar e qualidade de vida.</p>
@@ -111,8 +111,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6">
-              <div class="card">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="card-title">O Que Fazemos</h5>
                   <p class="card-text">Garantimos um lar temporário para pacientes em tratamento, com refeições completas e assistência especializada em diversas áreas, sempre com atenção e carinho em cada detalhe.</p>
@@ -121,7 +121,7 @@
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="card-title">Como Ajudar?</h5>
                   <p class="card-text">Voce pode contribuir com doações, voluntariado ou divulgando nossa causa. Cada gesto de solidariedade nos ajuda a continuar cuidando de quem precisa.</p>
@@ -141,7 +141,7 @@
               <p class="card-text">Doe via pix e ajude a transformar vidas! Sua doação faz a diferença. </p>
             </div>
           </div>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-wrap="true">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -198,11 +198,11 @@
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   Para onde vão as doações?
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   As doações são destinadas à associação e utilizadas para atender as necessidades dos pacientes em tratamento oncológico, garantindo alimentação, abrigo, suporte social, psicológico, jurídico e de enfermagem.
                 </div>
@@ -210,11 +210,11 @@
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseO" aria-expanded="false" aria-controls="collapseOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseO" aria-expanded="false" aria-controls="collapseO">
                   O que pode ser doado?
                 </button>
               </h2>
-              <div id="collapseO" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div id="collapseO" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   São aceitas doações de alimentos, roupas, produtos de higiene pessoal, materiais de limpeza, brinquedos, cabelo (a partir de 20cm) e itens de conforto para os pacientes. Também aceitamos doações em dinheiro para ajudar nas despesas da associação.
                 </div>
