--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide carousel-home" data-bs-wrap="true" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/aapc carousel.png" class="d-block" alt="Crianças deitadas na grama vestindo camisa da AAPC, sujas de tintas coloridas">
+                  <img src="img/aapc carousel.png" class="d-block img-fluid" alt="Crianças deitadas na grama vestindo camisa da AAPC, sujas de tintas coloridas">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carousel img2.png" class="d-block" alt="Criança ">
+                  <img src="img/carousel img2.png" class="d-block img-fluid" alt="Criança ">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carousel img3.png" class="d-block" alt="...">
+                  <img src="img/carousel img3.png" class="d-block img-fluid" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/carousel img.png" class="d-block" alt="...">
+                  <img src="img/carousel img.png" class="d-block img-fluid" alt="...">
                 </div>
               </div>
             </div>          </div>
@@ -155,28 +155,28 @@
         
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/associacao.jpg" class="d-block" alt="Família AAPC">
+              <img src="img/associacao.jpg" class="d-block img-fluid" alt="Família AAPC">
           </div>
               <div class="carousel-item">
-                  <img src="img/aapc img.png" class="d-block" alt="Alimentação AAPC">
+                  <img src="img/aapc img.png" class="d-block img-fluid" alt="Alimentação AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/aapc.png" class="d-block" alt="Natal AAPC">
+                  <img src="img/aapc.png" class="d-block img-fluid" alt="Natal AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/colorrida aapc .png" class="d-block" alt="Colorrida AAPC">
+                  <img src="img/colorrida aapc .png" class="d-block img-fluid" alt="Colorrida AAPC">
               </div>
               <div class="carousel-item">
-                  <img src="img/aapc criancas.jpg" class="d-block" alt="AAPC Crianças">
+                  <img src="img/aapc criancas.jpg" class="d-block img-fluid" alt="AAPC Crianças">
               </div>
               <div class="carousel-item">
-                <img src="img/AAPC ensina.jpg" class="d-block" alt="criança estudando">
+                <img src="img/AAPC ensina.jpg" class="d-block img-fluid" alt="criança estudando">
             </div>
             <div class="carousel-item">
-              <img src="img/aapc pessoas.jpg" class="d-block" alt="Grupo de Senhoras">
+              <img src="img/aapc pessoas.jpg" class="d-block img-fluid" alt="Grupo de Senhoras">
           </div>
           <div class="carousel-item">
-            <img src="img/aapc oficina.jpg" class="d-block" alt="Senhoras costurando">
+            <img src="img/aapc oficina.jpg" class="d-block img-fluid" alt="Senhoras costurando">
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
